media/css/plan.css
.icon-48-easystaging {
    background-image: url("../images/EasyStaging-48-icon.png");
}

#com_easystaging_plan_tabs div.current {
    background-color: white;
}

#com_easystaging_plan_tabs div.current p.tab-description {
    font-style: italic;
}

#com_easystaging_plan_tabs div.current .hidden {
    display: none;
}

.table_name, .action {
    width: 150px;
}

.table_name, .action, .action_result {
    font-weight: bold;
}

/* Toolbar */
div.toolbar-list li a.tb-off {
    cursor: default;
    color: #cccccc;
}

div.toolbar-list li a span.tb-off {
    background-position-y: 32px;
}

div.toolbar-list.tb-off a:hover,
div.toolbar-list.tb-off a:focus,
div.toolbar-list.tb-off a:active {
    border-color: transparent;
    text-decoration: none;
    color: #cccccc;
}

/* Plan Run Buttons */
#planControls {
    width: 60%;
    float: left;
}

#startFileBtn {
    background: url("../images/orange-1.png") no-repeat 0px 0px;
}

#startDBaseBtn {
    background: url("../images/blue-2.png") no-repeat 0px 0px;
}

#startAllBtn {
    background: url("../images/green-3.png") no-repeat 0px 0px;
}

#statusBtn {
    background: url("../images/Mushroom-Clown-Button.png") no-repeat 0px 0px;
}

#startFileBtn, #startDBaseBtn, #startAllBtn, #statusBtn {
    height: 32px;
    padding-top: 10px;
    padding-bottom: 10px;
}

#startFile, #startDBase, #startAll {
    margin: 34px;
    height: 32px;
}

#startFileBtn.com_easystaging_plan_btn_off,
#startDBaseBtn.com_easystaging_plan_btn_off,
#startAllBtn.com_easystaging_plan_btn_off,
#statusBtn.com_easystaging_plan_btn_off {
    background-position-y: -32px;
}

#startFileBtn.com_easystaging_plan_btn_off button:hover,
#startDBaseBtn.com_easystaging_plan_btn_off button:hover,
#startAllBtn.com_easystaging_plan_btn_off button:hover,
#statusBtn.com_easystaging_plan_btn_off button:hover {
    cursor: default;
    background-color: white;
}

/* Testing Div */
#es_testing {
    border: thin solid silver;
    width: 100%;
    display: table-cell;
}
#es_testing p {
    font-size: 0.8em;
    font-style: italic;
    margin-left: 0;
}

#es_dbtest, #es_rstest {
    border: thin solid silver;
    padding: 2%;
    margin: 2%;
    width: 41%;
}
#es_dbtest {
    float: left;
}
#es_rstest {
    float: right;
}
#RSTest-icon, #dbTest-icon {
    float: left;
    margin-right: 10px;
}
/* Filter buttons */
#table-filters {
    float: right;
    margin-top: -35px;
    height: 25px;
    width: 235px;
    overflow: hidden;
}
#table-filters:hover {
    background-color: #f5f5f5;
    border: thin solid gainsboro;
}
#table-filters #tf-toggle {
    float: right;
    height: 10px;
    width: 10px;
    margin-right: 5px;
    margin-top: 7px;
    background: url("/administrator/templates/bluestork/images/j_arrow.png") no-repeat 0px 0px;
    cursor: pointer;
}

#table-filters input {
    margin-top: 5px;
}

#table-filters.open #tf-toggle {
    background: url("/administrator/templates/bluestork/images/j_arrow_down.png") no-repeat 0px 0px;
}

#table-filters #tf-text p {
    float: left;
    margin-top: 7px;
    background-color: #ffffff;
}

#table-filters #tf-presets1, #table-filters #tf-presets2 {
    width: 230px;
    height: 30px;
    margin-left: 5px;
    clear: both;
    display: none;
}

#table-filters.open {
    height: 100px;
    border: thin solid gainsboro;
}

#table-filters.open #tf-presets1,
#table-filters.open #tf-presets2 {
    display: block;
}

/* Rsyncs Tab */
.rsyncs_label_th {
    width: 310px;
}
.rsyncs_direction_th {
    width: 130px;
}
.com_easystaging_rsync_label {
    margin-top: 8px;
    margin-bottom: 5px;
}
.com_easystaging_rsync_last_run {
    margin-top: 3px;
}
.com_easystaging_rsync_direction {
    margin-top: 8px;
}
.com_easystaging_rsync_source_path, .com_easystaging_rsync_target_path {
    margin-top: 8px;
}

/* Message Areas */
.com_easystaging_mgr_last_run, .com_easystaging_rsync_last_run {
    font-style: italic;
    color: silver;
}

#lastRunStatus {
    font-weight: bold;
    height: 20px;
    padding-left: 10px;
}

.planUpdatesDiv, #lastRunStatus {
    width: 60%;
    position: relative;
    clear: both;
}

#rsyncErrors {
    width: 40%;
    overflow: scroll;
    max-height: 140px;
    background-color: #eeeeee;
    display: none;
}

#rsyncErrors h3 {
    margin-left: 10px;
    color: #ff0000;
}

.cppl_es_error_list {
    float: left;
    clear: both;
    list-style: none;
}

.cppl_es_error_list li {
    margin: 5px;
}

.cppl_es_rsync_error_code {
    font-weight: bold;
}

.cppl_es_rsync_error_msg {
    margin-left: 15px;
    display: block;
    margin-top: -12px;
}

#currentStatus {
    line-height: 1.5em;
    overflow: scroll;
    max-height: 250px;
    padding: 5px 0px 50px 10px;
}

.payattention {
    background: #fffea1;
}

#currentStatus p {
    margin: 0px;
}

.waiting {
    background: url("../images/spinning.gif") no-repeat 50% 0%;
}

.es_ajax_error_msg {
    font-weight: bold;
    color: red;
}

